@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.68.2.3 2010/09/18 02:48:02 sfeam Exp $
+ * $Id: tables.h,v 1.68.2.4 2010/12/05 00:01:23 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -91,8 +91,8 @@ enum set_id {
     S_OFFSETS, S_ORIGIN, SET_OUTPUT, S_PARAMETRIC,
     S_PALETTE, S_PM3D, S_COLORBOX, S_COLORNAMES,
     S_CBLABEL, S_CBRANGE, S_CBTICS, S_NOCBTICS, S_MCBTICS, S_NOMCBTICS,
-    S_CBDATA, S_CBDTICS, S_NOCBDTICS, S_CBMTICS, S_NOCBMTICS,
-    S_OBJECT, S_PLOT, S_POINTSIZE, S_POLAR, S_PRINT,
+    S_CBDATA, S_CBDTICS, S_NOCBDTICS, S_CBMTICS, S_NOCBMTICS, S_OBJECT, 
+    S_PLOT, S_POINTINTERVALBOX, S_POINTSIZE, S_POLAR, S_PRINT,
     S_RRANGE, S_SAMPLES, S_SIZE, S_SURFACE, S_STYLE, 
     S_TABLE, S_TERMINAL, S_TERMOPTIONS,
     S_TICS, S_TICSCALE, S_TICSLEVEL, S_TIMEFMT, S_TIMESTAMP, S_TITLE,
