@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: unset.c,v 1.128.2.3 2010/06/26 06:43:47 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: unset.c,v 1.128.2.4 2010/12/05 00:01:23 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - unset.c */
@@ -116,6 +116,7 @@ static void unset_palette __PROTO((void));
 static void reset_colorbox __PROTO((void));
 static void unset_colorbox __PROTO((void));
 static void unset_pointsize __PROTO((void));
+static void unset_pointintervalbox __PROTO((void));
 static void unset_polar __PROTO((void));
 static void unset_print __PROTO((void));
 static void unset_samples __PROTO((void));
@@ -300,6 +301,9 @@ unset_command()
 	break;
     case S_COLORBOX:
 	unset_colorbox();
+	break;
+    case S_POINTINTERVALBOX:
+	unset_pointintervalbox();
 	break;
     case S_POINTSIZE:
 	unset_pointsize();
@@ -1236,6 +1240,13 @@ unset_pm3d()
 }
 
 
+/* process 'unset pointintervalbox' command */
+static void
+unset_pointintervalbox()
+{
+    pointintervalbox = 1.0;
+}
+
 /* process 'unset pointsize' command */
 static void
 unset_pointsize()
@@ -1685,6 +1696,7 @@ reset_command()
     unset_margin(&rmargin);
     unset_margin(&tmargin);
     unset_pointsize();
+    unset_pointintervalbox();
     pm3d_reset();
     reset_colorbox();
     reset_palette();
